# invoicing

./: LICENSE  README.md  pyproject.toml  sonar-project.properties
.github/workflows/: ci.yml  codeql.yml
config/vendors/: phoenix_config.yaml
schemas/Schemas/: __Faktura.xsd
src/config/: __init__.py  config_loader.py
src/models/: parsed_invoice.py  validation_result.py  vendor_config.py  xml_types.py
src/parsers/: __init__.py  base_parser.py
src/parsers/extractors/: __init__.py  keyword_extractor.py  regex_extractor.py
src/parsers/vendors/: __init__.py  phoenix_parser.py
src/utils/: logger.py
tests/parsers/: test_phoenix_parser.py
