[tool.poetry]
name = "accounting-bot"
version = "0.1.0"
description = ""
authors = ["pkantek_kpmg <pkantek@kpmg.cz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.14"
pypdf = "^6.4.0"
pymupdf = "^1.26.6"
pydantic = "^2.12.5"
lxml = "^6.0.2"
pyyaml = "^6.0.3"
typer = "^0.20.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-cov = "^7.0.0"
pytest-mock = "^3.15.1"
ruff = "^0.14.8"
ty = "^0.0.1a32"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
